# 2025-ikt218-osdev

./: .gitignore  CMakeLists.txt  compile_commands.json  package-lock.json  report.typst
.devcontainer/: devcontainer.json
.github/web/web/: main.py
.github/workflows/: parse_submissions.yaml
include/: kernel_memory.h  piano.h  printf.h
include/libc/: stdio.h
include/song/: note.h
src/: kernel.c  pit.c  printf.c
src/100_TheOs/: CMakeLists.txt  limine.cfg
src/100_TheOs/include/: common.h  descriptor_tables.h  gdt.h  idt.h  input.h  interrupts.h  irq.h  isr.handlers.h  keyboard.h  monitor.h  pit.h
src/100_TheOs/src/: boot.S  common.c  descriptor_table.asm  gdt.c  idt.c  irq.c  isr.c  isr.handlers.c  isr_asm.asm  kernel.c  kernel.cpp  keyboard.c  monitor.c  multiboot2.asm  pit.c  wrappers.c
src/10_SweaterOS/: CMakeLists.txt  limine.cfg
src/10_SweaterOS/include/: descriptorTables.h  display.h  gdt.h  (+15 more)
src/12_summernerds/: CMakeLists.txt
src/13_OSDev/: CMakeLists.txt
src/15_Shams/: CMakeLists.txt
src/17_Ikt_Agder/: CMakeLists.txt
src/18_osdev/: CMakeLists.txt
src/19_operatingpal/: CMakeLists.txt
src/1_elias/: CMakeLists.txt
src/21_UniBurst/: CMakeLists.txt
src/22_TheGits/: CMakeLists.txt
src/25_postkasse/: CMakeLists.txt
src/27_gruppe27/: CMakeLists.txt
src/28_aquila/: CMakeLists.txt
src/29_bread/: CMakeLists.txt
src/2_mangOS/: CMakeLists.txt
src/30_OSDev_mak_cosier_OSDev/: CMakeLists.txt
src/31_inefficientOS/: CMakeLists.txt
src/32_kriti/: CMakeLists.txt  limine.cfg
src/34_SHODAN/: CMakeLists.txt  run.sh
src/34_SHODAN/include/: memory.h  piano.h  pit.h
src/34_SHODAN/include/libc/: stddef.h  stdint.h  string.h
src/34_SHODAN/include/song/: frequencies.h  song.h  song_data.h  song_player.h
src/34_SHODAN/src/: kernel.c  kernel.cpp  memory.c  multiboot2.asm  piano.c  song_data.c  song_player.c  terminal.c  terminal.h
src/34_SHODAN/src/arch/i386/: gdt.c  gdt.h  gdt_flush.asm  idt.c  idt.h  idt_load.asm  io.c  irq.c  irq.h  irq_stub.asm  irq_stubs.asm  isr.c  isr.h  isr_stub.asm  isr_stubs.asm  keyboard.c  keyboard.h  linker.ld  paging.c  paging.h  pic.c  pic.h  pit.c  port_io.c  port_io.h
src/34_SHODAN/src/libc/: string.c
src/34_SHODAN/src/memory/: malloc.c  memory.c
src/36_group/: CMakeLists.txt
src/38_DaemonDuo/: CMakeLists.txt
src/39_TorjusVlad/: CMakeLists.txt
src/3_OSDev/: CMakeLists.txt
src/41_OsDev/: CMakeLists.txt  bootinfo.c  gdt.c  gdt.h  idt.c  idt.h  isr.c  keyboard.c  kmem.c  paging.c  pic.c  pit.c  port_io.h  printf.c  serial.c  serial.h  song_player.c  terminal.c  terminal.h  test_speaker.c  test_speaker.h
src/44_Impro/: CMakeLists.txt
src/45_compilecrew/: CMakeLists.txt
src/46_vbj/: CMakeLists.txt
src/4_runners/: CMakeLists.txt
src/60_kronos/: CMakeLists.txt  limine.cfg
src/69_MutexMafia/: CMakeLists.txt
src/70_AI_Alcatraz/: CMakeLists.txt  interrupts_implementation_report.txt  rappor2.txt  report.txt
src/72_cluster/: CMakeLists.txt  README.md
src/7_g7/: CMakeLists.txt
src/86_NikOS/: CMakeLists.txt
src/88_ak/: CMakeLists.txt
src/Group_14/:  hello.c  CMakeLists.txt  entry.asm  hello.c  limine.cfg  shell.c
src/Group_14/include/: assert.h  block_device.h  buddy.h  buffer_cache.h  cpuid.h  debug.h  disk.h  elf.h  elf_loader.h  exception_table.h  fat.h  fat_alloc.h  fat_core.h  fat_dir.h  fat_fs.h  fat_io.h  fat_lfn.h  fat_utils.h  frame.h  fs_config.h  fs_errno.h  fs_init.h  fs_limits.h  fs_util.h  gdt.h  get_cpu_id.h  idt.h  input.h  isr_frame.h  keyboard.h  keyboard_hw.h  keyboard_map.h  keymap.h  kmalloc.h  kmalloc_internal.h  mem.h  mm.h  mount.h  mount_table.h  msr.h  (+27 more)
src/Group_14/include/libc/: ctype.h  global.h  limits.h  stddef.h  stdint.h  stdio.h  stdmemory.h  string.h  unistd.h
src/Group_14/scripts/: start_qemu.sh
src/Group_14/src/:  tss_flush.asm  assert.c  block_device.c  buddy.c  buffer_cache.c  context_switch.asm  debug.c  disk.c  elf_loader.c  exception_table.c  fat.c  fat_alloc.c  fat_core.c  fat_dir.c  fat_fs.c  fat_io.c  fat_lfn.c  fat_utils.c  frame.c  fs_init.c  fs_util.c  gdt.asm  gdt.c  get_cpu_id.c  idt.c  idt_flush.asm  irq_stubs.asm  isr_pf.asm  isr_stubs.asm  jump_user.asm  kernel.c  keyboard.c  keyboard_map.c  keymap.c  kmalloc.c  mem.c  mm.c  mount.c  mount_table.c  msr.c  (+28 more)
src/Group_14/src/arch/i386/: linker.ld  user.ld
src/Group_14/user/hello/: hello.elf  user.ld
src/Gruppe_20/: CMakeLists.txt
src/OSDev_50/: CMakeLists.txt  limine.cfg
src/OSDev_50/group_name/: kernel.iso
src/OSDev_50/include/: common.h  descriptor_tables.h  frequencies.h  gdt.c  gdt.h  input.h  interrupts.h  matrix_rain.h  monitor.h  song.h  terminal.h
src/OSDev_50/include/libc/: monitor.h
src/OSDev_50/src/: gdt.c  idt.c  input.c  irq.c  isr.c  kernel.c  matrix_rain.c  monitor.c  multiboot2.asm  pit.c  song.c  song_player.cpp  stdint.c
src/OSDev_50/src/arch/i386/: gdt_flush.asm  linker.ld
src/OSDev_50/src/libc/: stdio.c
src/OSDev_50/src/memory/: malloc.c  memutils.c  paging.c
src/OSDev_50/src/terminal/: terminal.c
src/OSDev_75/: CMakeLists.txt
src/SverreNils/: CMakeLists.txt  README.md  limine.cfg  readme_forrunning_debug.md  run_debug.sh
src/aquila_28/: CMakeLists.txt
src/arch/: gdt.asm  idt.c  idt_load.asm  irq.asm
src/brunostOS/: CMakeLists.txt
src/devices/: keyboard.c  piano.c  song_player.c
src/documentation/: opp1.md  opp2.md
src/documentation /: opp00.md  opp3.md
src/group_11/: CMakeLists.txt  limine.cfg
src/group_42/: .clang-format  CMakeLists.txt
src/group_66/: CMakeLists.txt
src/group_9/: CMakeLists.txt  limine.cfg
src/group_name/: CMakeLists.txt
src/group_name_TBD/: CMakeLists.txt
src/solo_68/: CMakeLists.txt  linker.ld
src/solo_InverseDiscreteTimeFourierTransform/: CMakeLists.txt
src/solo_TempleDeveloper/: CMakeLists.txt
src/solo_group/: CMakeLists.txt
src/solo_hamed/: Makefile  flake.nix  grub.cfg  linker.ld  report.typst
src/solo_kOS/: CMakeLists.txt  limine.cfg
src/solo_should_have_chosen_windows/: CMakeLists.txt  limine.cfg
src/song/: music_1.c
src/the_byte_of_33/: CMakeLists.txt  README.md
(+1744 files in other folders)
